# kubegraph-py

./: Justfile  README.md  pyproject.toml
.github/workflows/: pylint.yaml  pylint.yml
examples/: show_all.py  show_csv.py  show_plain.py  show_polars.py
kubegraph/: __init__.py
